fix beating text alignment

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -96,6 +96,7 @@
   font-size: .8em;
   display: flex;
   margin-left: 20%;
+  width: 60%;
   color:#9c9c9c;
   animation: beat 1s ease infinite;
 }
@@ -127,5 +128,8 @@
   .langButton {
     align-self: center;
     margin: 1em 0;
+  }
+  .moreDetails{
+    width: 68%;
   }
 }
